--- a/mall-01/src/main/resources/application.yml
+++ b/mall-01/src/main/resources/application.yml
@@ -20,6 +20,18 @@ spring:
         min-idle: 0
     timeout: 3000ms
 
+  rabbitmq:
+    #连接地址
+    host: localhost
+    #端口号
+    port: 5672
+    #虚拟host
+    virtual-host: /mall
+    username: admin
+    password: admin
+    #如果对异步消息需要回调必须设置true
+    publisher-confirms: true
+
 #自定义redis key
 redis:
   key:
