--- a/mall-01/src/main/resources/application.yml
+++ b/mall-01/src/main/resources/application.yml
@@ -32,6 +32,18 @@ spring:
     #如果对异步消息需要回调必须设置true
     publisher-confirms: true
 
+
+  data:
+    elasticsearch:
+      repositories:
+        #是否启用elasticsearch存储库
+        enabled: true
+      #逗号分隔的集群节点地址列表
+      cluster-nodes: 127.0.0.1:9300
+      #集群名称
+      cluster-name: elasticsearch_limenglong
+
+
 #自定义redis key
 redis:
   key:
